# zcraft

./: CMakeLists.txt  README.md  main.cpp
zscripts/: linux_dependencies.sh
